# layer-ai-mcp-server

./: .gitignore  BUG_FIXES.md  DEPLOYMENT.md  LICENSE  README.md  install.sh  layer_ai_schema_full.json  requirements.dev.txt  requirements.min.txt  requirements.txt  setup.py  test_enhanced.py  verify-install.py
.github/workflows/: ci.yml
.kiro/settings/: mcp.json
.kiro/specs/layet-mcp-server/: design.md  requirements.md  tasks.md
assets/: README.md
layer-mcp-server/: COMPREHENSIVE_API_DOCS.md  KIRO_MCP_CONFIG.md  README.md  SECURITY_GUIDE.md  api-docs.md  auth.py  critical_bug_fixes.py  enhanced_server.py  fully_working_layer_ai_server.py  layer_ai_server.py  mcp-config.md  production_ready_layer_ai_server.py  pyproject.toml  security.md  server.py  setup.py  setup_credentials.py  token_manager.py
layer-mcp-server/.kiro/secure/: layer_tokens.enc
